# dir_cacher

./: .gitignore  README.md  TODO.md  build_portable.bat  builder.bat  convert_icon.py  database.py  main.py  scanner.py  scanner_cli.py
path_log_scanner/: Cargo.toml
path_log_scanner/src/: main.rs
scanner_core/: Cargo.toml
scanner_core/src/: lib.rs
ui/: explorer_table.py  export_dialog.py  i18n.py  icon_provider.py  main_window.py  settings_panel.py  styles.py
