[package]
name = "pathlog_scanner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pathlog_scanner"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
